# GoPy-TestLab

./: .gitignore  README.md
.github/workflows/: tests.yml
go/: go.mod  hello_test.go  ssh_client.go  utils.go
pages/: index.html
pages/allure-report/: hello.html
python/: README.md  pyproject.toml  requirements.txt  ssh_client.py  test_hello.py  utils.py
python/tests/: test_hello.py
